--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
 										<!-- Content -->
 											<h2 id="content">Meu nome é Fernanda Rodrigues Solimene</h2>
-											<p>Sou formada em Turismo e estou em transição de carreira para Análise de Dados.
-											Tenho uma boa experiência em Customer Success, onde aprendi muito sobre resolver problemas, me adaptar a situações novas e pensar de forma analítica. Sempre me dediquei ao máximo em tudo o que faço, com bastante atenção aos detalhes e comprometimento com a excelência.
-											<p>Recentemente, resolvi seguir para a área de dados porque vejo muitas oportunidades por lá e acho que posso fazer uma grande diferença. Para me preparar, estudei bastante e aprendi Excel avançado, SQL, Power BI, métricas de negócios e estou retomando os estudos de Python.</p>
-											<p>Agora, estou em busca da minha primeira colocação oficial nessa área para colocar todo esse conhecimento em prática, ajudar a equipe em que for trabalhar e crescer junto. Tenho certeza de que minha capacidade de aprender rápido, de resolver problemas complexos e minha experiência anterior podem gerar resultados positivos no mercado.</p>
+											<p>Sou formada em Turismo e especializada em Análise de Dados, com paixão por transformar informações em insights estratégicos. 
+												Minha experiência em Customer Success fortaleceu minha habilidade em resolução de problemas, comunicação eficiente e pensamento analítico—competências essenciais para extrair valor dos dados e impulsionar a tomada de decisões.
+											<p>Domino ferramentas como SQL, Power BI e Excel, além de estar aprimorando minhas habilidades em Python para análise de dados. Tenho experiência na criação de dashboards, manipulação de datasets e geração de relatórios estratégicos, sempre com foco em métricas de negócios e otimização de processos.</p>
+											<p>Com uma visão centrada no cliente e grande capacidade de adaptação, traduzo necessidades do negócio em análises acionáveis. Sou movida por desafios e pelo aprendizado contínuo, sempre buscando soluções orientadas a dados que gerem impacto real.</p>
 												</section>
 
 							<!-- Section -->
